AC_INIT(Makefile.in)

AC_PROG_CC
AC_CHECK_TOOL(STRIP, strip, true)
AC_PROG_INSTALL


AC_CYGWIN
AC_EXEEXT


# Darwin requires -no-cpp-precomp
case "${host}" in
    *-*-darwin*)
	CPPFLAGS="-no-cpp-precomp"
	CFLAGS="-no-cpp-precomp"
	;;
esac

WIN32=no
AC_MSG_CHECKING("for shared library link flag")
shared=-shared
EXTRALIBS=
case "${host}" in
     *-*-cygwin*)
        shared="-shared -Wl,--enable-auto-image-base"
	WIN32=yes
	;;
     *-*-hpux*)
	shared="-b"
	;;
     *-*-darwin1.[0123])
	shared="-bundle -undefined suppress"
	;;
     *-*-darwin*)
	shared="-bundle -undefined suppress -flat_namespace"
	;;
esac
AC_SUBST(shared)
AC_MSG_RESULT($shared)
AC_MSG_CHECKING("for win 32")
AC_SUBST(WIN32)
AC_MSG_RESULT($WIN32)

AC_SUBST(WIN32)
AC_SUBST(EXEEXT)
AC_SUBST(shared)
AC_SUBST(EXTRALIBS)

AC_OUTPUT(Makefile)
