AC_INIT(Makefile.in)

AC_PROG_CC
AC_CHECK_TOOL(STRIP, strip, true)
AC_PROG_INSTALL

AC_EXEEXT
AC_SUBST(EXEEXT)

# Combined check for Microsoft-related bogosities; sets WIN32 if found
AX_WIN32

# may modify CPPFLAGS and CFLAGS
AX_CPP_PRECOMP

# linker options when building a shared library
# AX_LD_SHAREDLIB_OPTS

AC_OUTPUT(Makefile)
